syntax = "proto3";

package model;

option go_package = "github.com/user/repo/proto/model";


// Effect 接口定义了一个效果的核心行为。
message Effect {
  oneof effect_oneof {
    MoveCharacterEffect move_character_effect = 1;
    AdjustParanoiaEffect adjust_paranoia_effect = 2;
    AdjustGoodwillEffect adjust_goodwill_effect = 3;
    AdjustIntrigueEffect adjust_intrigue_effect = 4;
  }
}

// MoveCharacterEffect 移动一个角色到指定地点。
message MoveCharacterEffect {
}

// AdjustParanoiaEffect 调整角色的妄想值。
message AdjustParanoiaEffect {
  int32 amount = 1;
}

// AdjustGoodwillEffect 调整角色的好感度。
message AdjustGoodwillEffect {
  int32 amount = 1;
}

// AdjustIntrigueEffect 调整角色的阴谋值。
message AdjustIntrigueEffect {
  int32 amount = 1;
}